--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+*{
+  box-sizing: border-box;
+}
+
+
+html,body{
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .App {
   text-align: center;
 }
@@ -42,8 +52,12 @@ h1.intro-title{
 }
 
 nav.navbar{
-  background-color: aqua !important;
+  background-color: blue !important;
   font-size: 20px;
+}
+
+nav .nav-link{
+  color: white !important;
 }
 
 .fw-700{
@@ -120,5 +134,6 @@ h1.title::after{
 
 
 footer{
-  background-color: #61dafb !important;
+  background-color: blue!important;
+  color: white;
 }
